# vllm_ft_bench

./: CLAUDE.md  LLM_INFERENCE_FLOW.md  PERFORMANCE.md  PROFILING.md  README.md  SCRIPTS.md  STRATEGY.md  TIMING.md  pyproject.toml
scripts/: bench_step_loop.py  cuda_alloc_bench.py  cuda_contention_bench.py  cuda_contention_bench2.py  cuda_event_blocking_bench.py  cuda_pipeline_bench.py  cudagraph_test.py  dispatcher_generate.py  mp_engine_generate.py  mp_generate.py  mp_profile_generate.py  mp_static_generate.py  profile_report.py  python_contention_bench.py  simple_generate.py  single_process_generate.py  stream_diagnostic.py  threaded_dispatch_generate.py  threaded_eventloop_generate.py  threaded_gap_breakdown.py  threaded_generate.py  threaded_instrumented.py  threaded_llm_generate.py  threaded_mp_generate.py  threaded_pipelined_generate.py  threaded_profile_generate.py  threaded_pull_generate.py  threaded_scaling_test.py  threaded_static_generate.py  threaded_step_breakdown.py  threaded_tp_generate.py  tp_generate.py  trace_step_flow.py  trace_tolist_patch.py
src/vllm_ft/: threaded_tp.py  util.py
