[project]
name = "vllm-threaded"
version = "0.1.0"
description = "Scripts to benchmark vllm with free-threaded Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_ft"]
