[project]
name = "vllm-threaded"
version = "0.1.0"
description = "Scripts to benchmark vllm with free-threaded Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hatchling",
]

[project.optional-dependencies]
mmprompts = [
  "datasets",
  "pillow",
  "torch",
  "torchcodec",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchcodec = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
#
#[tool.hatch.build.targets.wheel]
#packages = ["src/vllm_ft"]
